# AndroidThink

./: build.gradle  gradle.properties  key.jks  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle-asm-plugin/: build.gradle
gradle-plugin/apt-processor/: build.gradle
gradle-plugin/merge-plugin/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
think-accessibility/: build.gradle
think-accessibility/src/main/: AndroidManifest.xml
think-accessibilityservice/src/main/: AndroidManifest.xml
think-audioplayer/: build.gradle
think-audioplayer/src/main/: AndroidManifest.xml
think-bsdiff/: build.gradle
think-bsdiff/bspatch/: new.apk  old.apk  patch.apk
think-bsdiff/src/main/: AndroidManifest.xml
think-bsdiff/src/main/cpp/: CMakeLists.txt  bspatch.c  patch.cpp
think-business/: build.gradle
think-business/libs/: monitorsdk-1.0.4.aar  quicklogin_libary-external-release.aar
think-business/src/main/: AndroidManifest.xml
think-core/: build.gradle  other.md
think-core/src/main/: AndroidManifest.xml
think-coroutine/: build.gradle
think-coroutine/src/main/: AndroidManifest.xml
think-eventbus/: build.gradle
think-eventbus/src/main/: AndroidManifest.xml
think-hook/: build.gradle
think-hook/src/main/: AndroidManifest.xml
think-jetpack/: build.gradle
think-jetpack/src/main/: AndroidManifest.xml
think-retrofit/: build.gradle  data.json
think-rx/: build.gradle
think-study/: build.gradle
think-ui/: build.gradle
think-util/: build.gradle
think-vpn/: build.gradle
think-xposed/: build.gradle
(+662 files in other folders)
